syntax = "proto3";

option csharp_namespace = "Location.API.Protos";


import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


package LocationAPI;

service SupportLocationServiceGrpc {
	rpc GetSupportLocation(RequestFilterGrpc) returns (SupportLocationPageListGrpcDTO) {}
}

message SupportLocationListGrpcDTO
{
	repeated SupportLocationGrpcDTO SupportLocationDtos = 1;
}

message RequestFilterGrpc
{
	google.protobuf.StringValue	 orderBy = 1;
	google.protobuf.StringValue  dir = 2;
	google.protobuf.Int32Value  skip = 3;
	google.protobuf.Int32Value  take = 4;
	google.protobuf.StringValue  filters = 5;
	bool  paging = 6;
	google.protobuf.StringValue  keywords = 7;
}

message SupportLocationGrpcDTO
{
	google.protobuf.StringValue	 name = 1;
	google.protobuf.StringValue  code = 2;
	google.protobuf.StringValue  id = 3;
	google.protobuf.StringValue  path = 4;
	google.protobuf.Int32Value  level = 5;
	google.protobuf.DoubleValue x = 6;
	google.protobuf.DoubleValue  y = 7;
	google.protobuf.StringValue  address = 8;
	google.protobuf.StringValue  phone = 9;
}

message SupportLocationPageListGrpcDTO
{
	repeated SupportLocationGrpcDTO subset = 1;
	google.protobuf.Int32Value  count = 2;
	google.protobuf.Int32Value  pageCount = 3;
	google.protobuf.Int32Value  totalItemCount = 4;
	google.protobuf.Int32Value  skip = 5;
	google.protobuf.Int32Value  take = 6;
	bool  hasPreviousPage = 7;
	bool  hasNextPage = 8;
	bool  isFirstPage = 9;
	bool  isLastPage = 10;
}
